--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,34 +1,34 @@
 // bootstrap function
-@import "~bootstrap/scss/functions";
+@import '~bootstrap/scss/functions';
 
 // default variable overrides
-@import "./abstracts/variables";
+@import './abstracts/variables';
 
 // remainder of required Bootstrap stylesheets
-@import "~bootstrap/scss/variables";
+@import '~bootstrap/scss/variables';
 
 // default map overrides
 
 // remainder of required parts
-@import "~bootstrap/scss/maps";
-@import "~bootstrap/scss/mixins";
-@import "~bootstrap/scss/root";
+@import '~bootstrap/scss/maps';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/root';
 
 // other desired bootstrap contents
-@import "~bootstrap/scss/utilities";
-@import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/type";
-@import "~bootstrap/scss/grid";
-@import "~bootstrap/scss/helpers";
-@import "~bootstrap/scss/navbar";
-@import "~bootstrap/scss/forms";
-@import "~bootstrap/scss/tables";
-@import "~bootstrap/scss/buttons";
+@import '~bootstrap/scss/utilities';
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/type';
+@import '~bootstrap/scss/grid';
+@import '~bootstrap/scss/helpers';
+@import '~bootstrap/scss/navbar';
+@import '~bootstrap/scss/forms';
+@import '~bootstrap/scss/tables';
+@import '~bootstrap/scss/buttons';
 
 // @import '~bootstrap/scss/transitions';
 
 // bootstrap utitlities api
-@import "~bootstrap/scss/utilities/api";
+@import '~bootstrap/scss/utilities/api';
 
 // custom code
 .icon {
@@ -71,10 +71,10 @@
 }
 
 // custom imports
-@import "./scrollbar.scss";
-@import "./media.scss";
-@import "./graph.scss";
-@import "./navbar.scss";
+@import './scrollbar.scss';
+@import './media.scss';
+@import './graph.scss';
+@import './navbar.scss';
 
 // classes that change colors
 .black-text-label {
@@ -95,9 +95,9 @@
 }
 
 $custom-colors: (
-  "blue": hsl(187, 56%, 61%),
-  "green": hsl(153, 49%, 52%),
-  "red": hsl(359, 88%, 68%),
+  'blue': hsl(187, 56%, 61%),
+  'green': hsl(153, 49%, 52%),
+  'red': hsl(359, 88%, 68%),
 );
 
 @each $color, $value in $custom-colors {
@@ -108,10 +108,6 @@ $custom-colors: (
 
 .w-20 {
   width: 20px;
-}
-
-.w-1000 {
-  width: 1000px;
 }
 
 .w-0 {
